--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,5 +8,13 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="400dp" />
+
+    <Button
+        android:id="@+id/addnumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        android:onClick="addnumber"
+        app:layout_constraintTop_toBottomOf="@id/image" />
 
 </android.support.constraint.ConstraintLayout>
