--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,58 @@
         android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:onClick="test"/>
+        android:onClick="test"
+        android:text="Hello World!" />
 
     <Button
         android:id="@+id/filter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="filter"
         android:onClick="filterActivity"
+        android:text="filter"
         app:layout_constraintLeft_toRightOf="@id/test" />
+
+
+    <Button
+        android:id="@+id/getWidAndHeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="widAndaHeight"
+        android:text="获取宽高"
+        app:layout_constraintTop_toBottomOf="@id/test" />
+
+    <TextView
+        android:id="@+id/show_heAndWid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="xxx"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@id/getWidAndHeight" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:onClick="colorpick"
+        android:text="colorpick"
+        app:layout_constraintBaseline_toBaselineOf="@id/getWidAndHeight"
+        app:layout_constraintLeft_toRightOf="@id/getWidAndHeight" />
+
+    <Button
+        android:id="@+id/tcp_client"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="tcpClient"
+        android:text="tcp_client"
+        app:layout_constraintTop_toBottomOf="@id/show_heAndWid" />
+
+    <Button
+        android:id="@+id/ndk_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="ndkTestOnclick"
+        android:text="ndk_test"
+        app:layout_constraintTop_toBottomOf="@id/tcp_client" />
 
 </android.support.constraint.ConstraintLayout>
