--- a/app/src/main/res/layout/activity_socket.xml
+++ b/app/src/main/res/layout/activity_socket.xml
@@ -11,16 +11,19 @@
         android:text="connect" />
 
     <Button
+        android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="sendToTcp"
-        android:text="send" />
+        android:text="send"
+        android:visibility="invisible" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="disconnectTcp"
-        android:text="disconnect" />
+        android:text="disconnect"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/reviceTcp"
