--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,10 +56,18 @@
         app:layout_constraintLeft_toRightOf="@id/tcp_client" />
 
     <Button
+        android:id="@+id/httpUtils"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="http kalle  "
         android:onClick="httpUtils"
         app:layout_constraintTop_toBottomOf="@id/logUtils" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dialog utils"
+        android:onClick="dialogUtils"
+        app:layout_constraintTop_toBottomOf="@id/httpUtils" />
 
 </android.support.constraint.ConstraintLayout>
